<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E7C7C"
    tools:context="com.afiraz.ui.onboarding.OptionsActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/endgamefont"
        android:text="@string/pilih_lawanmu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_vs_player"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_landing_page1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_vs_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/endgamefont"
        android:text="@string/nama_vs_pemain"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#26FF00"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_vs_player" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/iv_vs_com"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="20dp"
        android:src="@drawable/ic_landing_page2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/tv_vs_com"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/endgamefont"
        android:text="@string/nama_vs_cpu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#26FF00"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_vs_com"/>


</androidx.constraintlayout.widget.ConstraintLayout>