<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_permainan"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/gamesfont"
        android:text="@string/title_game"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#E31919"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/permainan"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/permainan"
        app:layout_constraintTop_toTopOf="@id/tv_permainan" />

    <LinearLayout
        android:id="@+id/ll_player_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/gamesfont"
            android:text="@string/tv_player_one"
            android:textAlignment="center"
            android:textColor="#256CFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_paper_left"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_paper" />

        <ImageView
            android:id="@+id/iv_stone_left"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_stone" />

        <ImageView
            android:id="@+id/iv_scissor_left"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_scissor"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/endgamefont"
        android:text="@string/tv_vs"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="#DC0C0C"
        android:textSize="50sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <LinearLayout
        android:id="@+id/ll_player_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="@font/gamesfont"
            android:text="@string/tv_player_two"
            android:textAlignment="center"
            android:textColor="#256CFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_paper_right"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_paper" />

        <ImageView
            android:id="@+id/iv_stone_right"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginVertical="8dp"
            android:src="@drawable/ic_stone" />

        <ImageView
            android:id="@+id/iv_scissor_right"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_scissor" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_winner"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="30dp"
        android:fontFamily="@font/gamesfont"
        android:layout_marginTop="10dp"
        android:textColor="#0AFF0E"
        android:textSize="40sp"
        android:paddingTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/ll_player_left"
        app:layout_constraintRight_toRightOf="@id/iv_refresh"
        />

    <ImageView
        android:id="@+id/iv_refresh"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>